--- a/css/css.css
+++ b/css/css.css
@@ -55,24 +55,27 @@ li img {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    margin-top: 10px;
 }
 /*Parte do Billy*/
 #contentLeft {
     height: 657px;
     width: 50%;
     background-color: #14001a;
+    background-attachment: fixed;
+    background-size: cover;
     float: left;
 }
 #cardLeft {
-    height: 360px;
-    width: 280px;
+    height: 460px;
+    width: 350px;
     border: 1px solid #2f003d;
-    padding-top: 10px;
     margin: 0 auto;
     margin-top: 40px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-position: center;
     transition: 0.3s;
+    background-size: cover;
 }
 #h1Left {
     color: #ffa600;
@@ -92,10 +95,7 @@ li img {
 #cardLeft:hover {
     height: 460px;
     width: 350px;
-    box-shadow: 1px 1px 30px #ddb0ff;
-}
-#cardLeft:hover .img-gato {
-    box-shadow: 1px 1px 15px #ddb0ff ;
+    box-shadow: 2px 2px 60px black;
 }
 #cardLeft:hover #h1Left {
     display: none;
@@ -110,29 +110,28 @@ li img {
     width: 50%;
     background-color: #fefff0;
     float: right;
+    background-attachment: fixed;
 }
 #cardRight {
-    height: 360px;
-    width: 280px;
-    border: 1px solid #082900;
+    height: 460px;
+    width: 350px;
+    border: 1px solid #fefff0;
     padding-top: 10px;
     margin: 0 auto;
     margin-top: 40px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-position: center;
     transition: 0.3s;
 }
 #h1Right {
     color: #ff0055;
     font-size: 40px;
-    text-shadow: 1px 1px 5px #ffffcb, -1px -1px 5px #ffffcb;
     font-family: 'Permanent Marker', cursive;
     text-align: center;
     margin: 15px auto;
 }
 #h3Right {
     color: #ff0055;
-    text-shadow: 1px 1px 5px #ffffcb, -1px -1px 5px #ffffcb;
     font-family: 'Permanent Marker', cursive;
     font-size: 17px;
     text-align: left;
@@ -143,10 +142,7 @@ li img {
 #cardRight:hover {
     height: 460px;
     width: 350px;
-    box-shadow: 1px 1px 30px #004505;
-}
-#cardRight:hover .img-gato {
-    box-shadow: 1px 1px 15px #004505 ;
+    box-shadow: 2px 2px 60px #001f05;
 }
 #cardRight:hover #h1Right {
     display: none;
@@ -161,12 +157,14 @@ li img {
     height: 657px;
     width: 100%;
     background-color: #14001a;
+    background-attachment: fixed;
+    background-position: top;
+    background-size: cover;
 }
 #contentBilly img {margin: -2px;}
 #contentBilly div{
     height: 657px;
     width: 1200px;
-    background-color: #14001a;
     margin: 0 auto;
     padding: 30px;
 }
