--- a/css/css.css
+++ b/css/css.css
@@ -203,7 +203,7 @@ a {text-decoration: none !important;}
 }
 #contentBilly img {margin: -3px;}
 #contentBilly div {
-    text-align: left;
+    text-align: center;
 }
 
 /*azeitona.html*/
@@ -219,7 +219,7 @@ a {text-decoration: none !important;}
 }
 #contentAzeitona img {margin: -3px;}
 #contentAzeitona div {
-    text-align: left;
+    text-align: center;
 }
 
 /*Rodapé*/
